fixed set_endpoint.scss spacing

--- a/apps/browser-extension/src/components/set_endpoint/set_endpoint.scss
+++ b/apps/browser-extension/src/components/set_endpoint/set_endpoint.scss
@@ -6,7 +6,6 @@ p {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 
   gap: 16px;
 }
